# pygame-ce

./: .clangd  .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  a.py  benchmark.py  dev.py  ios-crossbuild.txt  meson.build  meson.options  meson_options.txt  mytest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  testingfile.py  tests.py
ctest/: base_ctest.c  meson.build  test_base.c  test_common.h
docs/: LEGACY_CREDITS.rst  README.md  __init__.py  __main__.py  meson.build  serve.py  static.py
docs/licenses/: LICENSE.sndfile.txt
docs/reST/: c_api.rst  conf.py  index.html  index.rst  logos.rst  modules.rst  tutorials.rst
docs/readmes/: README.de.rst  README.es.rst  README.fa.rst  README.fr.rst  README.gr.rst  README.it.rst  README.ja.rst  README.pt-br.rst  README.pt_BR.rst  README.ru.rst  README.zh-cn.rst  README.zh-tw.rst
src/: bufferproxy.c  color.c  draw.c  freetype.h  gfxdraw.c  key.c  line.c  mask.c  meson.build  mixer.c  pgcompat.c  pixelarray.c  render.c  rotozoom.c  rwobject.c  scrap_win.c  simd_shared.h  simd_transform.h  simd_transform_avx2.c  simd_transform_sse2.c  surface.c  surface.h  surface_fill.c  window.c
src/__pyinstaller/: hook-pygame.py
src/_debug/: _debug.py  meson.build
src/_freetype/: freetype.c  freetype.h  freetype.pyi  ft_cache.c  ft_layout.c  ft_wrap.c  ft_wrap.h  meson.build  pygame_freetype.h
src/_render/: meson.build  render.c
src/_sdl2/: controller.c  meson.build  touch.c
src/base/: base.c  meson.build  pygame_doc.h
src/bufferproxy/: bufferproxy.c  bufferproxy_doc.h  meson.build
src/camera/: _camera.h  _camera_opencv.py  camera.h  camera.py  camera_doc.h  camera_v4l2.c  meson.build
src/color/: color.c  color.pyi  color_doc.h  color_test.py  meson.build
src/constants/: constants.c  meson.build
src/cursors/: cursors.py  cursors.pyi  cursors_test.py  meson.build
src/display/: display.c  display.pyi  display_doc.h  display_test.py  meson.build
src/docs/: README.rst  docs_test.py  meson.build
src/draw/: draw.c  draw_doc.h  draw_test.py  meson.build
src/event/: event.c  event.pyi  meson.build
src/font/: font.c  font.h  font.pyi  font_doc.h  font_test.py  meson.build
src/freetype/: freetype.c  ft_layout.c  ft_wrap.h  meson.build
src/ftfont/: ftfont_test.py  meson.build
src/geometry/: circle.c  geometry_doc.h  line.c  meson.build
src/gfxdraw/: gfxdraw.c  meson.build
src/image/: image.c  image.pyi  image__save_gl_surface_test.py  imageext.c  meson.build
src/include/: _pygame.h  _pygame_internal.h  pgcompat.h  pgplatform.h  pygame.h
src/joystick/: joystick.c  meson.build
src/key/: key.c  key.pyi  meson.build
src/locals/: locals.py  meson.build
src/macosx/: meson.build
src/mask/: bitmask.c  mask.c  mask.h  mask.pyi  mask_test.py  meson.build
src/math/: math.c  math.pyi  meson.build
src/midi/: meson.build  midi_doc.h
src/mixer/: meson.build  mixer.c  mixer.h  mixer.pyi  music.c  pygame_mixer.h
src/mouse/: meson.build  mouse.c  mouse.pyi
src/newbuffer/: meson.build
src/pixelarray/: meson.build  pixelarray.c
src/pixelcopy/: meson.build  pixelcopy.c
src/pkgdata/: meson.build
src/pygame/: meson.build
src/pypm/: meson.build
src/rect/: meson.build  rect.c  rect.pyi  rect_doc.h
src/resources/: meson.build
src/rwobject/: meson.build  rwobject.c
src/scrap/: meson.build  scrap.c  scrap_test.py
src/sndarray/: meson.build  sndarray.py  sndarray.pyi  sndarray_test.py
src/sprite/: meson.build  sprite.py  sprite.pyi  sprite_doc.h  sprite_test.py
src/static/: static.c
src/surface/: _surface.h  blit_test.py  meson.build  simd_blitters_sse2.c  simd_surface_fill_sse2.c  surface.c  surface.h  surface.pyi  surface_doc.h
src/surfarray/: meson.build  surfarray.py  surfarray.pyi  surfarray_test.py
src/surflock/: meson.build
src/sysfont/: meson.build
src/system/: meson.build  system.c
src/tests/: __init__.py  __main__.py  meson.build
src/time/: meson.build  time.c  time_test.py
src/transform/: meson.build  rotozoom.c  simd_transform.h  simd_transform_sse2.c  transform.c  transform.pyi
src/typing/: meson.build  typing.pyi
src/version/: meson.build
src/window/: meson.build  window.c  window.pyi
src_c/: .clang-format  _base_audio.c  _base_audio.h  _base_display.c  _blit_info.h  _camera.c  _event.c  _freetype.c  _gfxdraw.c  _pygame.h  _sdl3_mixer_c.c  _sprite.c  _surface.h  alphablit.c  base.c  base.h  bitmask.c  bufferproxy.c  camera.h  camera_v4l2.c  camera_windows.c  circle.c  collisions.c  collisions.h  color.c  colordict.c  constants.c  display.c  draw.c  event.c  font.c  font.h  freetype.h  geometry.c  geometry.h  geometry_common.c  geometry_common.h  geometry_utils.c  geometry_utils.h  gfxdraw.c  (+65 more)
src_c/SDL_gfx/: SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h
src_c/_sdl2/: audio.c  controller.c  controller_old.c  meson.build  mixer.c  sdl2.c  touch.c  video.c
src_py/: __init__.py  _audio.py  _camera_opencv.py  _data_classes.py  _debug.py  _ffi.py  _sdl3_mixer.py  _sprite.py  camera.py  colordict.py  cursors.py  debug.py  display.py  draw_py.py  event.py  font.py  freetype.py  ftfont.py  gfxdraw.py  locals.py  macosx.py  meson.build  midi.py  mixer.py  mixer_music.py  pkgdata.py  rect.py  sndarray.py  sprite.py  surfarray.py  sysfont.py  typing.py  version.py
test/: README.rst  __init__.py  base_test.py  blit_test.py  bufferproxy_test.py  color_test.py  constants_test.py  controller_test.py  ctest_test.py  cursors_test.py  debug_test.py  display_test.py  docs_test.py  draw_test.py  event_test.py  font_test.py  freetype_test.py  ftfont_test.py  geometry_test.py  gfxdraw_test.py  image__save_gl_surface_test.py  image_test.py  imageext_test.py  joystick_tags.py  joystick_test.py  key_test.py  mask_test.py  math_test.py  meson.build  message_box_test.py  midi_test.py  mixer_music_test.py  mixer_test.py  mouse_test.py  pixelarray_test.py  pixelcopy_test.py  rect_test.py  render_test.py  rwobject_test.py  scrap_test.py  (+16 more)
(+593 files in other folders)
